# fastapi-tailwind-database-openai

./: .gitignore  .prettierrc.json  Dockerfile  README.md  alembic.ini  justfile  package-lock.json  package.json  pyproject.toml  tailwind.config.js
alembic/: README  env.py
alembic/versions/: 00ce81b9f1d6_prod.py  0ec06bbb2b66_testing.py  1ca27a9118f4_testing.py  223e213d576f_prod.py  2fdc2caa50ba_dev.py  333cb90e9f63_email.py  3613a45aa3bc_tmp.py  41e1453ab5e7_dev.py  74298de1e0a1_prod.py  7b2ee66113f9_default_message.py  8f147f5df4ea_automatic_revision.py  9b28fd9cc178_default_message.py  b8abafdbd280_testing.py  d8b735a15d5c_testing.py  d97fb1dd24f6_testing.py  eecd66764440_test.py  f033b565ada0_dev.py
app/: auth.py  common.py  crud.py  database.py  main.py  middleware.py  models.py  schemas.py  utils.py
app/data/blog/: blog.json
app/routers/: api.py  app.py  auth.py  blog.py  dependencies.py  utils.py
app/static/: output.css
app/static/js/: components.js
app/templates/: base.jinja
app/templates/blog/: index.jinja
app/templates/core/: index.jinja  js_plugins.jinja  navbar.jinja
app/tools/: publish_posts.py
libs/: llm.py  utils.py
project/: common.py  crud.py  database.py  exceptions.py  llm.py  main.py  middleware.py  models.py
project/routers/: api.py  app.py  auth.py  blog.py  dependencies.py  movie.py  reddit_bot.py  utils.py
project/static/: output.css
project/templates/: 404.jinja  base.jinja  demo.jinja  footer.jinja  index.jinja  navbar.jinja  search.jinja
project/tools/: publish_posts.py
tests/: test_main.py
(+7 files in other folders)
