[tool.poetry]
name = "my-app"
version = "0.0.2"
description = ""
authors = ["Thorne Wolf <thornecanyon@gmail.com>"]
readme = "README.md"
packages = [{include = "project"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-sqlalchemy = "^3.0.3"
flask-executor = "^1.0.0"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.1"
gunicorn = "^20.1.0"
flask-migrate = "^4.0.4"
fastapi = {extras = ["all"], version = "^0.95.0"}
uvicorn = "^0.21.1"
sqlalchemy = "^2.0.7"
cachetools = "^5.3.0"
absl-py = "^1.4.0"
openai = "^0.27.2"
htmldocx = "^0.0.6"
authlib = "^1.2.0"
commonmark = "^0.9.1"
jinja-partials = "^0.1.1"
coverage = "^7.2.7"
httpx = "^0.24.1"
beautifulsoup4 = "^4.12.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
