[tool.poetry]
name = "my-app"
version = "0.0.2"
description = ""
authors = ["Thorne Wolf <thornecanyon@gmail.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
openai = "^1.2.3"
fastapi = "^0.104.1"
numpy = "^1.26.1"
commonmark = "^0.9.1"
jinja2 = "^3.1.2"
gunicorn = "^21.2.0"
uvicorn = "^0.24.0.post1"
python-dotenv = "^1.0.0"
absl-py = "^2.0.0"
itsdangerous = "^2.1.2"
jinja-partials = "^0.1.1"
authlib = "^1.2.1"
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"